--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "react": "^0.14.6",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^0.14.6",
+    "react-router-dom": "^4.2.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "css-loader": "^0.28.11",
+    "style-loader": "^0.21.0"
+  },
   "scripts": {
     "dev": "webpack-dev-server --content-base src --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
