--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "react": "^0.14.6",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^0.14.6",
+    "react-icons-kit": "^1.1.4",
     "react-router-dom": "^4.2.2",
+    "react-sidebar": "^2.3.2",
+    "react-sidenav": "^2.1.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
+    "react-router-bootstrap": "^0.24.4",
     "style-loader": "^0.21.0"
   },
   "scripts": {
