--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^0.14.6",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^0.14.6",
+    "react-history": "^0.18.2",
     "react-icons-kit": "^1.1.4",
     "react-router-dom": "^4.2.2",
     "webpack": "^1.12.9",
