--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "jquery": "^3.3.1",
     "react": "^0.14.6",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^0.14.6",
