--- a/package.json
+++ b/package.json
@@ -4,34 +4,37 @@
   "description": "Social Betting front end",
   "main": "webpack.config.js",
   "dependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
     "jquery": "^3.3.1",
     "react": "^0.14.6",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^0.14.6",
     "react-history": "^0.18.2",
     "react-icons-kit": "^1.1.4",
-    "react-router-dom": "^4.2.2",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1"
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^7.1.2",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "react-hot-loader": "^3.1.3",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0",
     "css-loader": "^0.28.11",
     "react-router-bootstrap": "^0.24.4",
     "style-loader": "^0.21.0"
   },
   "scripts": {
     "dev": "webpack-dev-server --content-base src --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle": "webpack"
   },
-  "author": "",
+  "author": "Uzi Cohen",
   "license": "ISC"
 }
