--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Social Betting front end",
   "main": "webpack.config.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
@@ -18,14 +19,14 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.0",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "react-hot-loader": "^3.1.3",
-    "webpack": "^4.0.1",
+    "webpack": "^1.12.9",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0",
+    "webpack-dev-server": "^1.14.1",
     "css-loader": "^0.28.11",
     "react-router-bootstrap": "^0.24.4",
     "style-loader": "^0.21.0"
