--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "jquery": "^3.3.1",
+    "moment": "^2.22.1",
     "react": "^0.14.6",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^0.14.6",
